# tic-tac-toe

./: CONTRIBUTING.md  LICENSE  README.md  game.py  pyproject.toml  state.py
.github/workflows/: pycoverage.yml  pylint.yml  pytest.yml
tests/: testGame.py  testState.py  test_game.py  test_state.py
tic_tac_toe/: game.py  state.py
