[tool.poetry]
name = "ttt"
version = "0.1.0"
description = "A game of standard tic-tac-toe"
authors = ["mgross <mark@grossremarks.com>"]
license = "MIT"
packages = [
    { include  = "tic_tac_toe" },
]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
coverage = "^6.2"
pylint = "^2.12.2"
setuptools = "^59.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
